chore(start) consolidate the Start function, handle both the Message and the CallbackQuery

--- a/twittergram/localization/localizations/en-us.json
+++ b/twittergram/localization/localizations/en-us.json
@@ -1,3 +1,4 @@
 {
-    "start_message": "Hello <b>%s</b>, my name is %s"
+    "start_message": "Hello <b>%s</b>, my name is %s",
+    "about_button": "ℹ️ About"
 }
