--- a/twittergram/localization/localizations/pt-br.json
+++ b/twittergram/localization/localizations/pt-br.json
@@ -1,7 +1,12 @@
 {
+    "lang_name": "Português (BR)",
+    "lang_flag": "🇧🇷",
     "start_message": "Olá <b>%s</b>, me chamo %s",
     "info_message": "<b>— %s</b>\n\n<b>• Código Fonte:</b> <a href='github.com/ruizlenato/twittegram'>GitHub</a>\n<b>• Desenvolvedor:</b> @ruizlenato",
     "donate_mesage": "\n\n<b>💸 Contribua:</b>\nAjude a manter o bot no ar, faça uma doação via PIX ou PayPal.\n<b>Chave Pix e Email do PayPal:</b> <code>ruizlenato@proton.me</code>",
+    "language_menu_mesage": "<b>Seu idioma atual:</b> %s %s\n\n<b>Selecione abaixo o idioma que você quer utilizar no bot.</b>",
+    "language_changed_successfully": "O idioma foi alterado com sucesso.",
+    "language_button": "🌐 Idioma",
     "back_button": "↩️ Voltar",
     "about_button": "ℹ️ Sobre"
 }
